docs: add basic documentations for existing endpoints
